--- a/Swimmer_customer/app/src/main/res/layout/fragment_delivery_point_manage.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_delivery_point_manage.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.deliverypointmanage.DeliveryPointManageFragment">
 
@@ -14,32 +13,39 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/Toolbar_Swimmer_Customer" />
-    <com.google.android.material.divider.MaterialDivider
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:dividerColor="@color/black"/>
 
-    <Button
-        android:id="@+id/buttonFindAddress"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="배송지 추가하기" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="16dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDeliveryPoint"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/buttonFindAddress"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="배송지 추가하기" />
 
-    <TextView
-        android:id="@+id/textViewNoDeliveryPoints"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="등록된 배송지가 없습니다"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:visibility="gone" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewDeliveryPoint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/textViewNoDeliveryPoints"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="등록된 배송지가 없습니다"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:visibility="gone" />
+    </LinearLayout>
+
 
 </LinearLayout>
