fix : 상품 상세페이지에서 다시 홈화면 갈때 애니메이션이 반대

--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -230,9 +230,8 @@
         <action
             android:id="@+id/action_itemDetailFragment_to_item_home"
             app:destination="@id/item_home"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right" />
         <argument
             android:name="idx"
             app:argType="integer" />
