--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
@@ -39,11 +39,26 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/main_image_title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/main_image_title"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                <ImageView
+                    android:id="@+id/info_icon_main"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:src="@drawable/help_20px"
+                    app:tint="@color/md_theme_dark_outline" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -158,7 +173,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:gravity="top"
                 android:orientation="horizontal">
@@ -172,15 +187,12 @@
                     android:hint="@string/prompt_hashtag"
                     android:transitionGroup="true"
                     app:endIconMode="clear_text"
-                    app:errorEnabled="false"
-                    app:helperText="@string/prompt_hashtag_helper"
-                    app:helperTextEnabled="true"
-                    app:helperTextTextColor="@color/md_theme_light_secondary">
+                    app:errorEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/textInputEditTextHashTag"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:inputType="text" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -195,11 +207,19 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="@string/prompt_hashtag_helper"
+                android:textColor="@color/seed" />
+
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroupHashTag"
                 style="@style/Widget.Material3.ChipGroup"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 app:chipSpacingVertical="0dp" />
 
@@ -239,13 +259,28 @@
                     android:inputType="text|textMultiLine" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textViewDescriptionImage"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/prompt_description_image"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewDescriptionImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/prompt_description_image"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                <ImageView
+                    android:id="@+id/info_icon_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:src="@drawable/help_20px"
+                    app:tint="@color/md_theme_dark_outline" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearDescriptionImage"
