--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
@@ -109,6 +109,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
+                    android:focusable="false"
                     android:max="100"
                     android:progress="50"
                     android:thumb="@null" />
@@ -142,6 +143,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
+                    android:focusable="false"
                     android:max="100"
                     android:progress="50"
                     android:thumb="@null" />
@@ -175,6 +177,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
+                    android:focusable="false"
                     android:max="100"
                     android:progress="50"
                     android:thumb="@null" />
@@ -208,6 +211,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
+                    android:focusable="false"
                     android:max="100"
                     android:progress="50"
                     android:thumb="@null" />
@@ -241,6 +245,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
+                    android:focusable="false"
                     android:max="100"
                     android:progress="50"
                     android:thumb="@null" />
