--- a/Swimmer_seller/app/src/main/res/layout/fragment_login.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_login.xml
@@ -124,4 +124,14 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="230dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/copyright_and_version"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textSize="10sp" />
+
 </LinearLayout>
