--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
@@ -47,26 +47,27 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView36"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/label_customer_rating"
+                android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginEnd="3dp"
                     android:src="@drawable/star_24px"
                     app:tint="@android:color/holo_orange_light" />
@@ -100,14 +101,14 @@
                     android:id="@+id/textViewVeryGood"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:text="@string/label_review_very_good" />
 
                 <SeekBar
                     android:id="@+id/seekBarVeryGood"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="7"
                     android:clickable="false"
                     android:focusable="false"
                     android:max="100"
@@ -117,7 +118,7 @@
                 <TextView
                     android:id="@+id/textViewVeryGoodCount"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/_5"
                     android:textStyle="bold" />
 
@@ -134,14 +135,14 @@
                     android:id="@+id/textViewLike"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:text="@string/label_review_like" />
 
                 <SeekBar
                     android:id="@+id/seekBarLike"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="7"
                     android:clickable="false"
                     android:focusable="false"
                     android:max="100"
@@ -151,7 +152,7 @@
                 <TextView
                     android:id="@+id/textViewLikeCount"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/_5"
                     android:textStyle="bold" />
 
@@ -168,14 +169,14 @@
                     android:id="@+id/textViewSoso"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:text="@string/label_review_soso" />
 
                 <SeekBar
                     android:id="@+id/seekBarSoso"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="7"
                     android:clickable="false"
                     android:focusable="false"
                     android:max="100"
@@ -185,7 +186,7 @@
                 <TextView
                     android:id="@+id/textViewSosoCount"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/_5"
                     android:textStyle="bold" />
 
@@ -202,14 +203,14 @@
                     android:id="@+id/textViewJustOk"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:text="@string/label_review_just_ok" />
 
                 <SeekBar
                     android:id="@+id/seekBarJustOk"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="7"
                     android:clickable="false"
                     android:focusable="false"
                     android:max="100"
@@ -219,7 +220,7 @@
                 <TextView
                     android:id="@+id/textViewJuskOkCount"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/_5"
                     android:textStyle="bold" />
 
@@ -236,14 +237,14 @@
                     android:id="@+id/textViewNotMuch"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:text="@string/label_review_not_much" />
 
                 <SeekBar
                     android:id="@+id/seekBarNotMuch"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="7"
                     android:clickable="false"
                     android:focusable="false"
                     android:max="100"
@@ -253,7 +254,7 @@
                 <TextView
                     android:id="@+id/textViewNotMuchCount"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/_5"
                     android:textStyle="bold" />
 
