--- a/Swimmer_seller/app/src/main/res/layout/item_product_list.xml
+++ b/Swimmer_seller/app/src/main/res/layout/item_product_list.xml
@@ -38,8 +38,8 @@
             <ImageView
                 android:id="@+id/imageViewIcon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/navigate_next_24px"/>
+                android:layout_height="match_parent"
+                android:src="@drawable/navigate_next_24px" />
 
         </LinearLayout>
 
