--- a/Swimmer_customer/app/src/main/res/layout/fragment_product_review_tab_review_item.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_product_review_tab_review_item.xml
@@ -9,8 +9,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp">
 
         <TextView
@@ -63,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/review_item_custom_info"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reviewImageView" />
 
@@ -81,14 +82,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="150cm"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/reviewWeightTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="60kg"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -98,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/review_item_selection_option"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reviewCustomInfoTextView" />
 
@@ -116,14 +117,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="95"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/reviewColorTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="블랙"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -135,7 +136,7 @@
             android:maxLines="3"
             android:ellipsize="end"
             android:text="가격이 저렴하고 신축성이 좋아요\n 좋은 수영복 득템해서 너무 좋아요!sdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdssdsdsdssdsdsds"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reviewSelectionOptionTextView" />
