--- a/Swimmer_customer/app/src/main/res/layout/fragment_login.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_login.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.login.LoginFragment" >
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginRight="50dp"
-        android:fontFamily="@font/font_family"
-        android:gravity="center"
-        android:text="SWIMMER"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="40sp" />
+        android:orientation="vertical"
+        tools:context=".ui.login.LoginFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutLoginEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:transitionGroup="true"
-        app:endIconMode="clear_text">
-
-        <com.google.android.material.textfield.TextInputEditText
-            app:errorEnabled="true"
-            android:id="@+id/textInputEditTextLoginEmail"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="아이디를 입력해주세요"
-            android:inputType="text|textEmailAddress"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="140dp"
+            android:layout_marginRight="50dp"
+            android:fontFamily="@font/font_family"
+            android:gravity="center"
+            android:text="SWIMMER"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="40sp" />
 
-    <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutLoginEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="20dp"
+            android:transitionGroup="true"
+            app:endIconMode="clear_text">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputEditTextLoginEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="아이디를 입력해주세요"
+                android:inputType="text|textEmailAddress"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                app:errorEnabled="true" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutLoginPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,6 +74,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:text="자동로그인" />
+
     <Button
         android:id="@+id/ButtonLogin"
         style="@style/Widget.Material3.Button.OutlinedButton"
@@ -176,8 +182,6 @@
         android:layout_marginTop="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textSize="10sp" />
-    <!--        android:drawableLeft="@drawable/ic_launcher_background"-->
-    <!--        android:drawablePadding="8dp"/>-->
-
 
 </LinearLayout>
+</ScrollView>
